Corrected book serv props

--- a/bookService.properties
+++ b/bookService.properties
@@ -1,4 +1,4 @@
-spring.application.name = User-Service
+spring.application.name = bookService
 spring.cloud.config.uri= http://localhost:8888
 
 server.port= 3030
