--- a/BOOK-SERVICE.properties
+++ b/BOOK-SERVICE.properties
@@ -1,8 +1,7 @@
-spring.application.name = bookService
+spring.application.name = BOOK-SERVICE
 spring.cloud.config.uri= http://localhost:8888
 
 server.port= 3030
-#h2 Db Setup: 
 
 # H2 database related configurtions
 spring.h2.console.enabled=true
