--- a/zuul-service.properties
+++ b/zuul-service.properties
@@ -11,4 +11,4 @@ zuul.routes.bookService.path=/books/**
 zuul.routes.bookService.service-id=bookService
 
 zuul.routes.userService.path=/users/**
-zuul.routes.userService.service-id=userService
+zuul.routes.userService.service-id=USER-SERVICE
