--- a/zuul-service.properties
+++ b/zuul-service.properties
@@ -5,10 +5,10 @@ spring.cloud.config.uri= http://localhost:8888
 zuul.prefix = /api/**
 
 zuul.routes.LibraryService.path=/lib/**
-zuul.routes.LibraryService.service-id=LibraryService
+zuul.routes.LibraryService.service-id=LIBRARYSERVICE
 
 zuul.routes.bookService.path=/books/**
-zuul.routes.bookService.service-id=bookService
+zuul.routes.bookService.service-id=BOOK-SERVICE
 
 zuul.routes.userService.path=/users/**
 zuul.routes.userService.service-id=USER-SERVICE
