--- a/zuul-service.properties
+++ b/zuul-service.properties
@@ -1,14 +1,14 @@
-spring.application.name =  zuul-service
-server.port = 5050
+server.port = 6060
+spring.application.name = zuul-service
+eureka.client.service-url.default-zone=http://localhost:8761/eureka
 spring.cloud.config.uri= http://localhost:8888
 
-zuul.prefix = /api/**
+zuul.prefix = /api
+zuul.routes.LibraryService.path=/LibraryService/**
+zuul.routes.LibraryService.service-id=LIBRARY-SERVICE
 
-zuul.routes.LibraryService.path=/lib/**
-zuul.routes.LibraryService.service-id=LIBRARYSERVICE
-
-zuul.routes.bookService.path=/books/**
+zuul.routes.bookService.path=/bookService/**
 zuul.routes.bookService.service-id=BOOK-SERVICE
 
-zuul.routes.userService.path=/users/**
+zuul.routes.userService.path=/userService/**
 zuul.routes.userService.service-id=USER-SERVICE
